--- a/src/components/ModalForm/index.less
+++ b/src/components/ModalForm/index.less
@@ -1,3 +1,21 @@
 .hidden_field {
-    display: none;
+  display: none;
+}
+.ql-container {
+  overflow: scroll;
+  background: #fefcfc;
+  border-bottom-right-radius: 0.5em;
+  border-bottom-left-radius: 0.5em;
+}
+.ql-snow.ql-toolbar {
+  display: block;
+  background: #eaecec;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+}
+.ql-editor {
+  width: 100% !important;
+  min-height: 400px !important;
+  border: 1px solid #ccc;
+  border-radius: 0.5px;
 }
