--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -54,7 +54,7 @@
 }
 .btn_form_submit {
   width: 100%;
-  padding: 5px 0px;
+  padding: 5px 0;
   color: #fff;
   // background-color: #1890ff;
   background-color: @primary-color;
