--- a/src/components/ModalForm/index.less
+++ b/src/components/ModalForm/index.less
@@ -1,3 +1,4 @@
+@import (inline) 'google-fonts.css';
 .hidden_field {
   display: none;
 }
@@ -18,4 +19,20 @@
   min-height: 400px !important;
   border: 1px solid #ccc;
   border-radius: 0.5px;
+}
+.ql-picker.ql-font .ql-picker-label[data-value='Roboto']::before,
+.ql-picker.ql-font .ql-picker-item[data-value='Roboto']::before {
+  font-family: 'Roboto', cursive;
+  content: 'Roboto' !important;
+}
+.ql-picker.ql-font .ql-picker-label[data-value='Asap']::before,
+.ql-picker.ql-font .ql-picker-item[data-value='Asap']::before {
+  font-family: 'Asap', cursive;
+  content: 'Asap' !important;
+}
+.ql-font-Roboto {
+  font-family: 'Roboto';
+}
+.ql-font-Asap {
+  font-family: 'Asap';
 }
